--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,34 @@
+# sbt/bsp
+.bsp
+
+# Eclipse
+.classpath
+.project
+.settings/
+
+# Intellij
+.idea/
+*.iml
+*.iws
+
+# VSCode
+**metals*
+**bloop*
+**vscode*
+
+# Maven
+target/
+
 *.class
+
 *.log
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# datasets docker volume
+app-vol/datasets/nytd/**/*
+
+# root .env file
+.env
+
+# project docs for now
+docs
+
